--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^5.0.0",
     "@types/mongoose-sequence": "^3.0.11",
     "@types/node": "^22.7.6",
+    "@types/swagger-ui-express": "^4.1.6",
     "concurrently": "^9.0.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -30,6 +31,7 @@
     "mongoose": "^8.7.2",
     "node": "^22.10.0",
     "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "type-graphql": "^2.0.0-rc.2",
     "typescript": "^5.6.3"
   }
