--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/mongoose-sequence": "^3.0.11",
     "@types/node": "^22.7.6",
@@ -22,10 +23,13 @@
     "tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cjs-loader": "^0.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^7.2.0",
     "graphql-http": "^1.22.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.2",
