--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,9 @@
       ],
       "@schema/*": [
         "src/schema/*"
+      ],
+      "@error/*": [
+        "src/errors/*"
       ]
     }, /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
