--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "graphql-http": "^1.22.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.2",
+    "multer": "^1.4.5-lts.1",
     "node": "^22.10.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
