--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.0",
     "@types/mongoose-sequence": "^3.0.11",
     "@types/node": "^22.7.6",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth2": "^0.1.10",
     "@types/swagger-ui-express": "^4.1.6",
     "concurrently": "^9.0.1",
     "nodemon": "^3.1.7",
@@ -23,18 +26,22 @@
     "tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cjs-loader": "^0.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "graphql-http": "^1.22.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "node": "^22.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
     "type-graphql": "^2.0.0-rc.2",
